language/move-lang/tests/move_check/unit_test/multiple_test_annotations.unit_test.exp
error[E10005]: unable to generate test
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:5:7
  │
5 │     #[test(_a=@0x1)]
  │       ^^^^^^^^^^^^^ Missing test parameter assignment in test. Expected a parameter to be assigned in this attribute
6 │     #[test(_b=@0x2)]
7 │     public fun a(_a: signer, _b: signer) { }
  │                -             -- Corresponding to this parameter
  │                │              
  │                Error found in this test

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:6:7
  │
5 │     #[test(_a=@0x1)]
  │       ---- Attribute previously given here
6 │     #[test(_b=@0x2)]
  │       ^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

error[E10005]: unable to generate test
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:9:7
   │
 9 │     #[test]
   │       ^^^^ Missing test parameter assignment in test. Expected a parameter to be assigned in this attribute
10 │     #[test(_a=@0x1, _b=@0x2)]
11 │     public fun b(_a: signer, _b: signer) { }
   │                - -- Corresponding to this parameter
   │                │  
   │                Error found in this test

error[E10005]: unable to generate test
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:9:7
   │
 9 │     #[test]
   │       ^^^^ Missing test parameter assignment in test. Expected a parameter to be assigned in this attribute
10 │     #[test(_a=@0x1, _b=@0x2)]
11 │     public fun b(_a: signer, _b: signer) { }
   │                -             -- Corresponding to this parameter
   │                │              
   │                Error found in this test

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:10:7
   │
 9 │     #[test]
   │       ---- Attribute previously given here
10 │     #[test(_a=@0x1, _b=@0x2)]
   │       ^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

